# Vigilo

./: .dockerignore  .env.example  .env.span.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  RESULTS.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
arch/: __init__.py  config.py  mamba2.py  model.py  moe.py  sparse_attn.py  verifier.py
checkpoints/demo/: meta.json
docs/: DEPLOY-SPAN-GATEWAY.md
release/: README.md  docker-compose.yml  setup.ps1  setup.sh
reports/: demo-home-network.html  demo-malware-loud.html  demo-malware-stealth.html
scripts/: bettercap_capture_train.sh  bettercap_monitor.sh  build-release.ps1  build-release.sh  common.sh  generate_demo_data.py  home_monitor_test.sh  pcap_to_conn_zeek.sh  perdevice_capture.sh  scan_devices.sh
tests/: test_beaconing.py  test_dashboard.py  test_ensemble.py  test_features.py  test_zeek.py
vigilo/: README.md  __init__.py  beaconing.py  benchmark.py  cli.py  dashboard.py  detect.py  ensemble.py  evaluate.py  features.py  forecaster.py  model_config.py  pcap_to_conn.py  perasset_eval.py  report.py  train.py  zeek.py
